fixed popup help page button visibility

--- a/WebGazer-master/www/search/css/bootstrap.css
+++ b/WebGazer-master/www/search/css/bootstrap.css
@@ -2630,7 +2630,7 @@ input[type="search"] {
     line-height: 46px;
   }
 }
-.form-group {
+.form-group-gender {
   margin-bottom: 15px;
 }
 .radio,
@@ -2915,7 +2915,7 @@ select[multiple].input-lg {
   color: #737373;
 }
 @media (min-width: 768px) {
-  .form-inline .form-group {
+  .form-inline .form-group-gender {
     display: inline-block;
     margin-bottom: 0;
     vertical-align: middle;
@@ -2976,7 +2976,7 @@ select[multiple].input-lg {
 .form-horizontal .checkbox {
   min-height: 27px;
 }
-.form-horizontal .form-group {
+.form-horizontal .form-group-gender {
   margin-right: -15px;
   margin-left: -15px;
 }
@@ -4379,7 +4379,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1), 0 1px 0 rgba(255, 255, 255, .1);
 }
 @media (min-width: 768px) {
-  .navbar-form .form-group {
+  .navbar-form .form-group-gender {
     display: inline-block;
     margin-bottom: 0;
     vertical-align: middle;
@@ -4429,10 +4429,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 @media (max-width: 767px) {
-  .navbar-form .form-group {
+  .navbar-form .form-group-gender {
     margin-bottom: 5px;
   }
-  .navbar-form .form-group:last-child {
+  .navbar-form .form-group-gender:last-child {
     margin-bottom: 0;
   }
 }
@@ -6471,8 +6471,8 @@ button.close {
 .container-fluid:after,
 .row:before,
 .row:after,
-.form-horizontal .form-group:before,
-.form-horizontal .form-group:after,
+.form-horizontal .form-group-gender:before,
+.form-horizontal .form-group-gender:after,
 .btn-toolbar:before,
 .btn-toolbar:after,
 .btn-group-vertical > .btn-group:before,
@@ -6501,7 +6501,7 @@ button.close {
 .container:after,
 .container-fluid:after,
 .row:after,
-.form-horizontal .form-group:after,
+.form-horizontal .form-group-gender:after,
 .btn-toolbar:after,
 .btn-group-vertical > .btn-group:after,
 .nav:after,
